# UBB-INFO

./: README.md
Semestrul 1/ASC/: ASC TEMA.txt
Semestrul 1/ASC/Examen Practic/: 1.asm  1.lst
Semestrul 1/ASC/Notepad++/: 1.asm  1.lst  10.asm  10.lst  2.asm  2.lst  3.asm  3.lst  4.asm  4.lst  5.asm  5.lst  6.asm  6.lst  7.asm  7.lst  8.asm  8.lst  9.asm  9.lst  TESTE.asm  TESTE.lst  adivb.txt  lab10_ex_ora.asm  lab10_ex_ora.lst  lab11.asm  lab11.lst  lab3.asm  lab3.lst  lab3_2.asm  lab3_2.lst  lab3_3.asm  lab3_3.lst  lab3_4.asm  lab3_4.lst  lab3_5.asm  lab3_5.lst  lab3_6.asm  lab3_6.lst  lab4.asm  (+31 more)
Semestrul 1/ASC/Probleme suplimentare/: lab6_1.asm  lab6_1.lst  lab6_2.asm  lab6_2.lst  lab6_9.asm  lab6_9.lst  lab8_27.asm  lab8_27.lst  lab8_27.txt  lab8_28.asm  lab8_28.lst  lab8_4.asm  lab8_4.lst  lab8_4.txt  lab8_6.asm  lab8_6.lst  lab8_6.txt
Semestrul 1/FP/: LAB3.docx  LAB4-6.docx  LAB7-9.docx
Semestrul 1/FP/Backtracking/: main.py
Semestrul 1/FP/LAB3/: main.py
Semestrul 1/FP/LAB4-6/: Optiuni.py  functii.py  main.py
Semestrul 1/FP/Mobila/: console.py  main.py
Semestrul 1/FP/Practic/: main.py  ui.py
Semestrul 1/FP/Proiect_de_la_fac/: .project  main.py
Semestrul 1/FP/Teoretic/: main.py
Semestrul 1/FP/Varianta Examen/: console.py  main.py
Semestrul 1/FP/camera/: main.py
Semestrul 1/FP/lab7-9_4/: main.py
Semestrul 1/FP/simulare/: console.py  main.py
Semestrul 1/LC/: Consultatii 24 ianuarie.docx
Semestrul 2/AG/Test1/: CMakeLists.txt  main.cpp
Semestrul 2/AG/Test2/: CMakeLists.txt  main.cpp
Semestrul 2/AG/lab01/: main.cpp
Semestrul 2/AG/lab01_2/: CMakeLists.txt  main.cpp
Semestrul 2/AG/lab02/: CMakeLists.txt  main.cpp
Semestrul 2/OOP/: CodeReviewTemplate.odt  lab2_4_OOP.rar
Semestrul 2/OOP/PracticMELODII2 - Copy/: CMakeLists.txt  Model.h  main.cpp  observer.cpp  repo.h
Semestrul 2/OOP/PracticProduse/: CMakeLists.txt  domain.h  gui.cpp  gui.h  main.cpp  model.h  repo.cpp  repo.h  service.cpp  service.h
Semestrul 2/OOP/SIMULARE/Apartamente/: CMakeLists.txt  apartamente.txt  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h
Semestrul 2/OOP/SIMULARE/Rochii/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  main.cpp  repo.cpp  repo.h  service.cpp  service.h
Semestrul 2/OOP/TESTQT/: CMakeLists.txt  main.cpp
Semestrul 2/OOP/VectorDinamicCPP/: CMakeLists.txt
Semestrul 2/OOP/VectorDinamicCPP/VectorDinamicCPP/: Pet.h  VectDinNewDelete.h  VectDinSmartPointer.h  VectorDinamicTemplate.h
Semestrul 2/OOP/adt-sortedIteratedList/adt-sortedIteratedList/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIteratedList.cpp  SortedIteratedList.h  data.txt
Semestrul 2/OOP/lab10_11_VS/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  main.cpp  produs.h  repo.cpp  repo.h  service.cpp  undo.h  validare.cpp  vector.h
Semestrul 2/OOP/lab10_11_visual/: CMakeLists.txt  CosProduse.h  service.cpp  ui.cpp
Semestrul 2/OOP/lab2_4_OOP/: CMakeLists.txt  MyList.c  MyList.h  domeniu.c  domeniu.h  main.c  repository.c  repository.h  service.c  service.h  teste.c  teste.h  ui.c  ui.h  validare.c  validare.h
Semestrul 2/OOP/lab2_7/: CMakeLists.txt  app  cheltuieli.c  cheltuieli.h  lista.h  main.c  repo.c  repo.h  repo.h.gch  service.c  service.h  service.h.gch  ui.c  ui.h  ui.h.gch  valid.c  valid.h  valid.h.gch
Semestrul 2/OOP/lab6-7/lab6/: CMakeLists.txt  main.cpp  produs.cpp  produs.h  repo.cpp  repo.h  service.cpp  service.h  ui.cpp  ui.h
Semestrul 2/OOP/lab8_9/: CMakeLists.txt  LabRepo.cpp  main.cpp
Semestrul 2/SDA/Colectie2/: CMakeLists.txt  pseudocod.txt
Semestrul 2/SDA/Colectie2/Proiect C++/Colectie/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Semestrul 2/SDA/Colectie2/Teste/: TestExtins.cpp  TestScurt.cpp  TestScurt.h
Semestrul 2/SDA/Cursuri/Curs3 - Containere (Matrice, Colectie, Multime, Dictionar, Coada)/Implementare Colectie/: CMakeLists.txt
Semestrul 2/SDA/Cursuri/Curs6 - Liste inlantuite - reprezentarea inlanturilor pe tablou/Colectie simplu inlantuita/: CMakeLists.txt  Colectie.cpp  Colectie.h  Iterator.cpp  Iterator.h
Semestrul 2/SDA/LAB2/TAD Dictionar/: CMakeLists.txt  pseudocod.txt
Semestrul 2/SDA/LAB2/TAD Dictionar/Proiect_C++/: Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h
Semestrul 2/SDA/LAB4_/OneDrive_2024-04-24/Lista Ordonata - cu pozitie iterator/: CMakeLists.txt  pseudocod.txt
Semestrul 2/SDA/LAB4_/OneDrive_2024-04-24/Lista Ordonata - cu pozitie iterator/Proiect C++/: App.cpp  Iterator.cpp  Iterator.h  LO.cpp  LO.h
Semestrul 2/SDA/LAB4_/OneDrive_2024-04-24/Lista Ordonata - cu pozitie iterator/Teste/: TestExtins.cpp  TestScurt.cpp  TestScurt.h
Semestrul 2/SDA/REZOLVARE CURS COLECTIE/Implementare Colectie - repre. TD adresare deschisa cu verificare liniara/: CMakeLists.txt  colectie.h  main.cpp
Semestrul 2/SDA/TAD Colectie/: CMakeLists.txt
Semestrul 2/SDA/TAD Colectie/Proiect C++/Colectie/: App.cpp  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
Semestrul 2/SDA/TAD Colectie/Proiect C++/Colectie (cu rel)/: Colectie.h
Semestrul 2/SDA/TAD Colectie/Teste/: TestExtins.cpp  TestScurt.cpp
Semestrul 2/SDA/george/Lab4/: App.cpp  CMakeLists.txt  IteratorLP.cpp  IteratorLP.h  Lab4.sln  Lab4.vcxproj  Lab4.vcxproj.filters  Lista.cpp  Lista.h  TestExtins.cpp  TestScurt.cpp
Semestrul 2/SDA/george/Lab4/Lab4/x64/Debug/: Lab4.exe.recipe  Lab4.ilk  testextins.obj.enc  vc143.idb
Semestrul 2/SDA/george/Lab4/Lab4/x64/Debug/Lab4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lab4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Semestrul 2/SDA/lab4/: CMakeLists.txt
Semestrul 2/SDA/lab4/Lista Ordonata - cu pozitie iterator/Proiect C++/: App_1.cpp  Iterator.cpp  Iterator.h  Iterator_1.cpp  Iterator_1.h  LO.cpp  LO.h
Semestrul 2/SO/: 1.odt  3.txt  New Text Document (2).txt  New Text Document.txt  ses.lnk
Semestrul 3/Baze de date/: Evenimente Sportive2.sql
(+1154 files in other folders)
