cmake_minimum_required(VERSION 3.28)
project(Implementare_Colectie___repre__TD_adresare_deschisa_cu_verificare_liniara)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Implementare_Colectie___repre__TD_adresare_deschisa_cu_verificare_liniara
        colectie.cpp
        colectie.h
        main.cpp)
