cmake_minimum_required(VERSION 3.26)
project(Implementare_Colectie___reprezentare_secventiala_folosind_vector_dinamic)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Implementare_Colectie___reprezentare_secventiala_folosind_vector_dinamic
        Colectie.cpp
        Colectie.h
        main.cpp)
